--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,8 +28,8 @@ jobs:
         python -m pip install --upgrade pip
     - name: Build package
       run: |
+        echo "REL_VER=0.1.2" >> $GITHUB_ENV
         python3 setup.py sdist
-        echo "REL_VER=v$(python3 -m pyao)" >> $GITHUB_ENV
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
